--- a/question-mark.html
+++ b/question-mark.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta rel="canonical" href="index.html">
     <link rel="icon" href="assets/5726532.ico">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -24,5 +24,5 @@
         </div>
     </div>
 
-    <script src="scripts/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
